--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@fastify/static": "^6.11.2",
     "@fastify/websocket": "^8.2.0",
+    "@reduxjs/toolkit": "^1.9.6",
     "fastify": "^4.23.2",
     "fastify-cors": "^6.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@fastify/vite": "^4.0.0",
